[gd_scene load_steps=12 format=3 uid="uid://bre5v4cmh8k8s"]

[ext_resource type="Script" path="res://script/boss.gd" id="1_vfun5"]
[ext_resource type="Texture2D" uid="uid://wpi4k0ygqccu" path="res://asset/boss dragon.png" id="3_rl7md"]
[ext_resource type="Script" path="res://script/area_around_boss.gd" id="4_561qw"]
[ext_resource type="Texture2D" uid="uid://02sucom05i4y" path="res://asset/boss carapace basse.png" id="4_syssr"]
[ext_resource type="Script" path="res://component/blink.gd" id="5_ycwad"]
[ext_resource type="Script" path="res://component/colorChange.gd" id="6_wm3uw"]
[ext_resource type="Script" path="res://component/shake.gd" id="7_1wddf"]
[ext_resource type="AudioStream" uid="uid://cpqi5mfhndk55" path="res://asset/explosion.wav" id="8_lmpy3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sg3tq"]
size = Vector2(50, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7q61"]
size = Vector2(394, 209)

[sub_resource type="SpriteFrames" id="SpriteFrames_41618"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rl7md")
}, {
"duration": 1.0,
"texture": ExtResource("4_syssr")
}],
"loop": true,
"name": &"boss_animation",
"speed": 5.0
}]

[node name="Node2D" type="StaticBody2D" groups=["boss"]]
script = ExtResource("1_vfun5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 14.5)
shape = SubResource("RectangleShape2D_sg3tq")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("4_561qw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-91, -74.5)
shape = SubResource("RectangleShape2D_q7q61")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_41618")
animation = &"boss_animation"

[node name="BlinkComponent" type="Node" parent="." node_paths=PackedStringArray("image")]
script = ExtResource("5_ycwad")
image = NodePath("../Area2D/AnimatedSprite2D")

[node name="ColorChange" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("6_wm3uw")
duration = 0.5
color = Color(1, 0.156863, 0.247059, 1)
target = NodePath("../Area2D/AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("7_1wddf")
node = NodePath("../Area2D/AnimatedSprite2D")
shake_y_axis = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_lmpy3")

[connection signal="hit" from="." to="BlinkComponent" method="blink"]
[connection signal="hit" from="." to="ColorChange" method="color_tween"]
[connection signal="hit" from="." to="ShakeComponent" method="tween_shake"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="body_exited"]
[connection signal="change_into_carapace" from="Area2D" to="." method="emit_carapace"]
[connection signal="change_into_standard" from="Area2D" to="." method="emit_standard"]
[connection signal="twin_finished" from="ColorChange" to="ColorChange" method="color_reset"]
